[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sinkron"
version = "1.0.0"
description = "Python client library for Sinkron - Give your agent permanent email addresses through Clawhub"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Web3 Hungry", email = "rakawidhiantoro@gmail.com"},
]
maintainers = [
    {name = "Web3 Hungry", email = "rakawidhiantoro@gmail.com"},
]
keywords = ["email", "inbox", "api", "ai", "agent", "permanent-email", "clawhub", "sinkron"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests>=2.28.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "bandit>=1.7.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "types-requests>=2.28.0",
]
test = [
    "pytest>=7.0.0",
    "requests-mock>=1.10.0",
]

[project.scripts]
sinkron = "sinkron.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["sinkron"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = false
ignore_missing_imports = true
warn_unreachable = false
